# pyqalculate

./: .gitignore  README.md  demo.py  pyproject.toml  run_plot_tests.py  start.bat  test_runner.py
demo/: 不定积分.txt  定积分.txt  微分方程.txt  极限.txt  求导.txt
demo_output/: 01_basic_operations.txt  02_unit_conversions.txt  03_physical_constants.txt  04_algebra_equations.txt  05_calculus.txt  06_matrices.txt  07_statistics.txt  08_number_bases.txt  09_time_date.txt  10_plots.txt  README.md
manual/: 01-overview.md  02-quickstart.md  03-start-bat.md  04-cli.md  04a-expressions.md  04b-functions.md  04c-constants.md  05-gui.md  06-calculator-api.md  07-functions.md  09-plotting.md  10-testing.md  glossary.md  index.md  pyqalculate-help.html
pyqalc/: __init__.py  __main__.py  cli.py
pyqalculate/: __init__.py  builtin_functions.py  calculator.py  dataset.py  datetime_ext.py  definitions.py  expression_item.py  function.py  math_structure.py  number.py  parser.py  plot.py  prefix.py  types.py  unit.py  variable.py
pyqalculate_data/: __init__.py  currencies.json  datasets.json  elements.json  functions.json  planets.json  prefixes.json  units.json  variables.json
pyqalculate_gui/: __init__.py  __main__.py  app.py  autocomplete.py  calculator_service.py  conversion_view.py  event_bus.py  export_csv_dialog.py  expression_edit.py  expression_status.py  history_view.py  i18n.py  import_csv_dialog.py  input_widget.py  keyboard_shortcuts.py  keypad.py  main_window.py  math_renderer.py  menu_bar.py  plot_dialog.py  plot_widget.py  preferences_dialog.py  result_view.py  result_widget.py  sidebar_widget.py  status_bar.py  theme.py
scripts/: convert_definitions.py  demo.py  gui.py  run_plot_tests.py  run_pyqalculate_tests.py  test_runner.py
tests/: test_basic.py  test_calculator.py  test_calculator_service.py  test_cli.py  test_constants.py  test_csv.py  test_datasets.py  test_dialog_base.py  (+16 more)
(+46 files in other folders)
