[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqalculate"
version = "0.1.0"
description = "A pure Python port of libqalculate - the ultimate calculator library"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "PyQalculate Contributors"},
]
keywords = ["calculator", "math", "qalculate", "units", "conversion"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "sympy>=1.12",
    "gmpy2>=2.1.5",
    "mpmath>=1.3.0",
    "pint>=0.22",
    "convertdate>=2.4.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
    "pyreadline3>=3.4.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
pyqalc = "pyqalc.cli:main"

[project.urls]
Homepage = "https://github.com/pyqalculate/pyqalculate"
Repository = "https://github.com/pyqalculate/pyqalculate"
Issues = "https://github.com/pyqalculate/pyqalculate/issues"

[tool.setuptools.packages.find]
include = ["pyqalculate*", "pyqalc*", "pyqalculate_gui*"]

[tool.setuptools.package-data]
pyqalculate_data = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
